--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
         https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-analytics.js"></script>
 
+    <!-- small chat -->
+    <script src="https://embed.small.chat/TUKKNNC0NGUHDKKU8Y.js" async></script>
+
     <script>
       // Your web app's Firebase configuration
       var firebaseConfig = {
